feat: ts 代码生成优化，对于required字段，取消null类型声明
