# example/simple-go/gen/api/user_http.pb.go
@@ -1,5 +1,5 @@
 // Code generated by protoc-gen-bic. DO NOT EDIT.
-// versions:2.1.4
+// versions:1.3.4
 
 package api
 
@@ -55,8 +55,8 @@ type x_UserService struct {
 // @Summary 获取用户列表
 // @Tags    User-Service
 // @Produce json
-// @Param   page      query    uint32 true "页码"
-// @Param   page_size query    uint32 true "每页数量"
+// @Param   page      -        page      query uint32 true "页码"
+// @Param   page_size -        page_size query uint32 true "每页数量"
 // @Success 200       {object} ResponseUsers
 // @Failure 401       {string} string "header need Authorization data"
 // @Failure 403       {string} string "no api permission or no obj permission"
@@ -90,13 +90,10 @@ func (x *x_UserService) GetUsers(ctx *gin.Context) {
 // @Summary 添加用户
 // @Tags    User-Service
 // @Produce json
-// @Param   id       body     uint32 false "主键ID"
-// @Param   username body     string false "用户名"
-// @Param   email    body     string false "邮箱"
-// @Param   sex      body     Sex    false "性别"
-// @Success 200      {object} ResponseNil
-// @Failure 401      {string} string "header need Authorization data"
-// @Failure 403      {string} string "no api permission or no obj permission"
+// @Param   data body     User true "body 参数"
+// @Success 200  {object} ResponseNil
+// @Failure 401  {string} string "header need Authorization data"
+// @Failure 403  {string} string "no api permission or no obj permission"
 // @Router  /users/v1/ [POST]
 func (x *x_UserService) PostUsers(ctx *gin.Context) {
 	req := &User{}
